// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card it should render with sorts: default 1`] = `
.card {
  position: relative !important;
  margin: 2rem 2rem 0 2rem !important;
  width: 780px !important;
  height: 300px !important;
  background-color: whitesmoke !important;
  display: -webkit-box !important;
  display: -moz-box !important;
  display: -ms-flexbox !important;
  display: -webkit-flex !important;
  display: flex !important;
}

.img {
  min-width: 500px !important;
  max-width: 500px !important;
}

.contentContainer {
  margin: 1rem !important;
  color: rgb(21, 47, 132) !important;
  width: 100% !important;
  position: relative !important;
}

.h2 {
  font-weight: lighter !important;
  font-size: 0.8rem !important;
}

.starIcon {
  color: rgb(255, 220, 0) !important;
}

.ul {
  list-style: none !important;
  padding-left: 0 !important;
  font-weight: lighter !important;
  font-size: 0.8rem !important;
  color: black !important;
}

.callToAction {
  padding: 0px !important;
  color: rgb(21, 47, 132) !important;
  background-color: rgb(255, 220, 0) !important;
  width: 100% !important;
  height: 4rem !important;
  border: none !important;
  border-radius: 0.2rem !important;
  cursor: pointer !important;
  position: absolute !important;
  bottom: 0px !important;
}

.actionText {
  font-size: small !important;
  display: block !important;
}

.actionAmount {
  font-weight: bold !important;
  font-size: medium !important;
}

.readMore {
  position: absolute !important;
  bottom: 0 !important;
  left: 0 !important;
  background-color: whitesmoke !important;
  color: rgb(21, 47, 132) !important;
  padding: 0.5rem 1rem !important;
  font-size: small !important;
  cursor: pointer !important;
  border: none !important;
}

.readMore:hover {
  color: rgb(21, 47, 132) !important;
  background-color: rgb(255, 220, 0) !important;
}

.readMoreContent-isHidden {
  background-color: whitesmoke !important;
  width: 780px !important;
  margin: 0 2rem 2rem 2rem !important;
  padding: 1rem !important;
  display: none !important;
}

.h3 {
  font-size: small !important;
  color: rgb(21, 47, 132) !important;
}

.p {
  font-size: small !important;
  font-weight: lighter !important;
  line-height: 1.2rem !important;
}

<section>
  <div
    class="card"
  >
    <img
      alt="Image of the hotel"
      class="img"
      src="http://localhost:9999/hotel-image-1.png"
    />
    <div
      class="contentContainer"
    >
      <h1>
        Iberostar Grand Salome
      </h1>
      <h2
        class="h2"
      >
        Costa Adeje, Tenerife
      </h2>
      <div>
        <i
          class="starIcon fas fa-star"
        />
        <i
          class="starIcon fas fa-star"
        />
        <i
          class="starIcon fas fa-star"
        />
        <i
          class="starIcon fas fa-star"
        />
      </div>
      <ul
        class="ul"
      >
        <li>
          <span>
            <strong>
              2
            </strong>
             adults & 
            <strong>
              1
            </strong>
             infant
          </span>
        </li>
        <li>
          <strong>
            3rd July 2019
          </strong>
           for 
          <strong>
            7 days
          </strong>
        </li>
        <li>
          departing from 
          <strong>
            East Midlands
          </strong>
        </li>
      </ul>
      <button
        class="callToAction"
      >
        <span
          class="actionText"
        >
          Book now
        </span>
        <span
          class="actionAmount"
        >
          £3,136.50
        </span>
      </button>
    </div>
    <button
      class="readMore"
      id="btn-read-more"
    >
      <strong>
        Read more
      </strong>
       about this hotel  
      <i
        class="fas fa-angle-right"
      />
    </button>
  </div>
  <div
    class="readMoreContent-isHidden"
  >
    <h3
      class="h3"
    >
      Overview
    </h3>
    <p
      class="p"
    >
      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    </p>
  </div>
</section>
`;

exports[`Card when read more is clicked, it should show more content: with more content 1`] = `
.card {
  position: relative !important;
  margin: 2rem 2rem 0 2rem !important;
  width: 780px !important;
  height: 300px !important;
  background-color: whitesmoke !important;
  display: -webkit-box !important;
  display: -moz-box !important;
  display: -ms-flexbox !important;
  display: -webkit-flex !important;
  display: flex !important;
}

.img {
  min-width: 500px !important;
  max-width: 500px !important;
}

.contentContainer {
  margin: 1rem !important;
  color: rgb(21, 47, 132) !important;
  width: 100% !important;
  position: relative !important;
}

.h2 {
  font-weight: lighter !important;
  font-size: 0.8rem !important;
}

.starIcon {
  color: rgb(255, 220, 0) !important;
}

.ul {
  list-style: none !important;
  padding-left: 0 !important;
  font-weight: lighter !important;
  font-size: 0.8rem !important;
  color: black !important;
}

.callToAction {
  padding: 0px !important;
  color: rgb(21, 47, 132) !important;
  background-color: rgb(255, 220, 0) !important;
  width: 100% !important;
  height: 4rem !important;
  border: none !important;
  border-radius: 0.2rem !important;
  cursor: pointer !important;
  position: absolute !important;
  bottom: 0px !important;
}

.actionText {
  font-size: small !important;
  display: block !important;
}

.actionAmount {
  font-weight: bold !important;
  font-size: medium !important;
}

.readMore {
  position: absolute !important;
  bottom: 0 !important;
  left: 0 !important;
  background-color: whitesmoke !important;
  color: rgb(21, 47, 132) !important;
  padding: 0.5rem 1rem !important;
  font-size: small !important;
  cursor: pointer !important;
  border: none !important;
}

.readMore:hover {
  color: rgb(21, 47, 132) !important;
  background-color: rgb(255, 220, 0) !important;
}

.h3 {
  font-size: small !important;
  color: rgb(21, 47, 132) !important;
}

.p {
  font-size: small !important;
  font-weight: lighter !important;
  line-height: 1.2rem !important;
}

.readMoreContent {
  background-color: whitesmoke !important;
  width: 780px !important;
  margin: 0 2rem 2rem 2rem !important;
  padding: 1rem !important;
}

<section>
  <div
    class="card"
  >
    <img
      alt="Image of the hotel"
      class="img"
      src="http://localhost:9999/hotel-image-1.png"
    />
    <div
      class="contentContainer"
    >
      <h1>
        Iberostar Grand Salome
      </h1>
      <h2
        class="h2"
      >
        Costa Adeje, Tenerife
      </h2>
      <div>
        <i
          class="starIcon fas fa-star"
        />
        <i
          class="starIcon fas fa-star"
        />
        <i
          class="starIcon fas fa-star"
        />
        <i
          class="starIcon fas fa-star"
        />
      </div>
      <ul
        class="ul"
      >
        <li>
          <span>
            <strong>
              2
            </strong>
             adults & 
            <strong>
              1
            </strong>
             infant
          </span>
        </li>
        <li>
          <strong>
            3rd July 2019
          </strong>
           for 
          <strong>
            7 days
          </strong>
        </li>
        <li>
          departing from 
          <strong>
            East Midlands
          </strong>
        </li>
      </ul>
      <button
        class="callToAction"
      >
        <span
          class="actionText"
        >
          Book now
        </span>
        <span
          class="actionAmount"
        >
          £3,136.50
        </span>
      </button>
    </div>
    <button
      class="readMore"
      id="btn-read-more"
    >
      <strong>
        Read more
      </strong>
       about this hotel  
      <i
        class="fas fa-angle-down"
      />
    </button>
  </div>
  <div
    class="readMoreContent"
  >
    <h3
      class="h3"
    >
      Overview
    </h3>
    <p
      class="p"
    >
      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    </p>
  </div>
</section>
`;
